tests/reference/asr-test_append_type_mismatch-030e9c7.stderr
semantic error: Type mismatch while appending to a list, found (string and integer).
 --> tests/errors/test_append_type_mismatch.py:6:5
  |
6 |     l.append('a')
  |     ^^^^^^^^^^^^^ 
